// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Statistic /> should match the default snapshot 1`] = `
<div
  className="sc-bczRLJ FSYQs"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-gsnTZi djAFig"
  >
    Unknown statistic
  </h2>
  <p
    className="sc-dkzDqf iBSKNz"
    data-qa="-value"
  >
    -
  </p>
  <p
    className="sc-hKMtZM kHcxZC"
  >
    No change
  </p>
</div>
`;

exports[`<Statistic /> with negative change value should match the negative change snapshot 1`] = `
<div
  className="sc-bczRLJ FSYQs"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-gsnTZi djAFig"
  >
    A statistic with a negative change
  </h2>
  <p
    className="sc-dkzDqf iBSKNz"
    data-qa="statWithNegativeChange-value"
  >
    0
  </p>
  <p
    className="sc-hKMtZM kHcxZC"
  >
    -1
     
    decrease
  </p>
</div>
`;

exports[`<Statistic /> with no change in value over the change period should match the no change snapshot 1`] = `
<div
  className="sc-bczRLJ FSYQs"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-gsnTZi djAFig"
  >
    A statistic with no change over the change period
  </h2>
  <p
    className="sc-dkzDqf iBSKNz"
    data-qa="statWithNoChange-value"
  >
    1
  </p>
  <p
    className="sc-hKMtZM kHcxZC"
  >
    No change
  </p>
</div>
`;

exports[`<Statistic /> with percentages should decorate the value with a percent 1`] = `
<div
  className="sc-bczRLJ FSYQs"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-gsnTZi djAFig"
  >
    A statistic with a percentage
  </h2>
  <p
    className="sc-dkzDqf iBSKNz"
    data-qa="stateWithPercentageValue-value"
  >
    5%
  </p>
  <p
    className="sc-hKMtZM kHcxZC"
  >
    No change
  </p>
</div>
`;

exports[`<Statistic /> with positive change value should match the positive change snapshot 1`] = `
<div
  className="sc-bczRLJ FSYQs"
  data-qa="keyworker-stat"
>
  <h2
    className="sc-gsnTZi djAFig"
  >
    A statistic with a positive change
  </h2>
  <p
    className="sc-dkzDqf iBSKNz"
    data-qa="statWithPositiveChange-value"
  >
    2
  </p>
  <p
    className="sc-hKMtZM kHcxZC"
  >
    +
    1
     
    increase
  </p>
</div>
`;
